Adjusting layout issues

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -45,16 +45,12 @@
   }
 }
 
-.about-pic,
 .about-block {
   max-width: 550px;
   margin: 3rem auto;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-}
-
-.about-block {
   padding: 2rem;
   background-color: #f2f9ff;
   transform: scale(1);
@@ -135,8 +131,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 1.2rem;
-  margin: 0 1.5rem;
+  column-gap: 1rem;
+  margin: 0;
 }
 
 .about__list {
